--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
@@ -27,3 +28,7 @@ package-lock.json
 # intellij files
 *.iml
 .idea/**
+
+# hardhat build dirs
+/artifacts
+/cache
